Add unit of work

--- a/src/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
+++ b/src/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlatformService.Persistence.Repositories\PlatformService.Persistence.Repositories.csproj" />
     <ProjectReference Include="..\PlatformService.Persistence\PlatformService.Persistence.csproj" />
   </ItemGroup>
 
