Add unit of work into infra

--- a/src/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
+++ b/src/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PlatformService.Persistence.Repositories\PlatformService.Persistence.Repositories.csproj" />
+    <ProjectReference Include="..\PlatformService.Persistence.UnitOfWork\PlatformService.Persistence.UnitOfWork.csproj" />
     <ProjectReference Include="..\PlatformService.Persistence\PlatformService.Persistence.csproj" />
   </ItemGroup>
 
