--- a/src/PlatformService.Web/PlatformService.Web.csproj
+++ b/src/PlatformService.Web/PlatformService.Web.csproj
@@ -10,9 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlatformService.Persistence.Repositories\PlatformService.Persistence.Repositories.csproj" />
-    <ProjectReference Include="..\PlatformService.Persistence.UnitOfWork\PlatformService.Persistence.UnitOfWork.csproj" />
-    <ProjectReference Include="..\PlatformService.Persistence\PlatformService.Persistence.csproj" />
+    <ProjectReference Include="..\PlatformService.Application\PlatformService.Application.csproj" />
+    <ProjectReference Include="..\PlatformService.Infrastructure\PlatformService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
