add kubernetes and docker files

--- a/src/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService.StartUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=PlatformServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=PlatformServiceDB;Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password"
   },
   "Logging": {
     "LogLevel": {
