--- a/src/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService.StartUp/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "RabbitMqConfiguration": {
+    "Hostname": "http://localhost:6000/",
+    "Path": "api/command/platforms"
+  },
   "AllowedHosts": "*"
 }
