--- a/src/PlatformService.Messaging/PlatformService.Messaging.csproj
+++ b/src/PlatformService.Messaging/PlatformService.Messaging.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PlatformService.Persistence\PlatformService.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
