--- a/src/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService.StartUp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost,1433;Initial Catalog=PlatformServiceDB;Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password"
+    //"DefaultConnection": "Data Source=localhost,1433;Initial Catalog=PlatformServiceDB;Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password",
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=PlatformServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -10,7 +11,7 @@
     }
   },
   "RabbitMqConfiguration": {
-    "Hostname": "http://localhost:6000/",
+    "Host": "https://localhost:6001/",
     "Path": "api/command/platforms"
   },
   "AllowedHosts": "*"
