--- a/K8S/commands-depl.yaml
+++ b/K8S/commands-depl.yaml
@@ -16,7 +16,7 @@ spec:
         - name: commandservice
           image: kosstow/commandservice:latest
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: commands-clusterip-srv
