--- a/K8S/platforms-depl.yaml
+++ b/K8S/platforms-depl.yaml
@@ -16,7 +16,7 @@ spec:
         - name: platformservice
           image: kosstow/platformservice:latest
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: platforms-clusterip-srv
