test kubernetes connection

--- a/src/PlatformService/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.json
@@ -11,7 +11,7 @@
     }
   },
   "RabbitMqConfiguration": {
-    "Host": "https://commands-clusterip-srv:80/",
+    "Host": "http://commands-clusterip-srv:80/",
     "Path": "api/command/platforms"
   },
   "AllowedHosts": "*"
