--- a/src/PlatformService/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Data Source=localhost,1433;Initial Catalog=PlatformServiceDB;Persist Security Info=True;User ID=SA;Password=yourStrong(!)Password",
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=PlatformServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalConnection": "Server=.\\SQLEXPRESS;Database=platformsdb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "KubernetesConnection": "Data Source=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;Persist Security Info=True;User ID=SA;Password=1qaz!QAZ"
   },
   "Logging": {
     "LogLevel": {
