--- a/src/PlatformService/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalConnection": "Server=.\\SQLEXPRESS;Database=platformsdb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LocalConnection": "Data Source=localhost,1433;Initial Catalog=platformsdb;Persist Security Info=True;User ID=SA;Password=1qaz!QAZ",
     "KubernetesConnection": "Data Source=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;Persist Security Info=True;User ID=SA;Password=1qaz!QAZ"
   },
   "Logging": {
