--- a/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
+++ b/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CommandsService.Persistence.Repositories\CommandsService.Persistence.Repositories.csproj" />
+    <ProjectReference Include="..\CommandsService.Persistence\CommandsService.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
