--- a/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
+++ b/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommandsService.Application\CommandsService.Application.csproj" />
     <ProjectReference Include="..\CommandsService.Persistence.Repositories\CommandsService.Persistence.Repositories.csproj" />
     <ProjectReference Include="..\CommandsService.Persistence\CommandsService.Persistence.csproj" />
   </ItemGroup>
