--- a/src/CommandsService/CommandsService.StartUp/appsettings.json
+++ b/src/CommandsService/CommandsService.StartUp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection": "Data Source=.\\SQLEXPRESS,1433;Initial Catalog=commandsdb;Persist Security Info=True;User ID=SA;Password=1qaz!QAZ"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
