commands - getall getsingle

--- a/src/CommandsService/CommandsService.StartUp/appsettings.json
+++ b/src/CommandsService/CommandsService.StartUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalConnection": "Data Source=.\\SQLEXPRESS,1433;Initial Catalog=commandsdb;Persist Security Info=True;User ID=SA;Password=1qaz!QAZ"
+    "LocalConnection": "Server=.\\SQLEXPRESS;Database=theSocialNetworkDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
