fix connection string

--- a/src/CommandsService/CommandsService.StartUp/appsettings.json
+++ b/src/CommandsService/CommandsService.StartUp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "LocalConnection": "Server=.\\SQLEXPRESS;Database=theSocialNetworkDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "LocalConnection": "Server=.\\SQLEXPRESS;Database=commandsdb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
