--- a/src/PlatformService/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.json
@@ -11,8 +11,8 @@
     }
   },
   "RabbitMqConfiguration": {
-    "Host": "http://commands-clusterip-srv:80/",
-    "Path": "api/command/platforms"
+    "Host": "rabbitmq-clusterip-srv",
+    "Port": "5672"
   },
   "AllowedHosts": "*"
 }
