--- a/src/PlatformService/PlatformService.StartUp/appsettings.Development.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "RabbitMqConfiguration": {
-    "Host": "localhost",
-    "Port": "5672"
+    "RabbitMqHost": "localhost",
+    "RabbitMqPort": "5672"
   }
 }
