--- a/src/PlatformService/PlatformService.StartUp/appsettings.json
+++ b/src/PlatformService/PlatformService.StartUp/appsettings.json
@@ -11,8 +11,8 @@
     }
   },
   "RabbitMqConfiguration": {
-    "Host": "rabbitmq-clusterip-srv",
-    "Port": "5672"
+    "RabbitMqHost": "rabbitmq-clusterip-srv",
+    "RabbitMqPort": "5672"
   },
   "AllowedHosts": "*"
 }
