--- a/src/CommandsService/CommandsService.StartUp/appsettings.Development.json
+++ b/src/CommandsService/CommandsService.StartUp/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "RabbitMqConfiguration": {
+    "RabbitMqHost": "localhost",
+    "RabbitMqPort": "5672"
   }
 }
