--- a/src/CommandsService/CommandsService.StartUp/appsettings.json
+++ b/src/CommandsService/CommandsService.StartUp/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "RabbitMqConfiguration": {
+    "RabbitMqHost": "rabbitmq-clusterip-srv",
+    "RabbitMqPort": "5672"
+  },
   "AllowedHosts": "*"
 }
