--- a/src/CommandsService/CommandsService.Messaging/CommandsService.Messaging.csproj
+++ b/src/CommandsService/CommandsService.Messaging/CommandsService.Messaging.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+  </ItemGroup>
+
 </Project>
