--- a/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
+++ b/src/CommandsService/CommandsService.Infrastructure/CommandsService.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Mapster" Version="7.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
   </ItemGroup>
 
