--- a/src/PlatformService/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
+++ b/src/PlatformService/PlatformService.Infrastructure/PlatformService.Infrastructure.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\PlatformService.Persistence\PlatformService.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Operations\Delete\" />
+  </ItemGroup>
+
 </Project>
